Page-blog adjustments

--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -10,7 +10,7 @@
 
       .socials.flex.items-center.md:ml-24
         = link_to "https://github.com/exercism", class: 'c-social-icon' do
-          = graphical_icon 'external-site-github'
+          = graphical_icon 'external-site-github', css_class: 'filter-textColor1'
           GitHub
         = link_to "https://twitter.com/exercism_io", class: 'c-social-icon twitter' do
           = graphical_icon 'external-site-twitter'
