--- a/app/css/pages/blog.css
+++ b/app/css/pages/blog.css
@@ -1,7 +1,7 @@
 @import "../styles";
 
 #page-blog {
-    @apply bg-backgroundColorA;
+    @apply bg-backgroundColorB;
     & header {
         @apply shadow-base;
 
@@ -18,6 +18,7 @@
         }
     }
     & .highlighted-post {
+        @apply bg-backgroundColorA rounded-8;
         &:hover {
             & h2 {
                 @apply underline;
@@ -31,6 +32,7 @@
             @apply text-textColor6;
             @apply mb-16 md:mb-24;
             & .video img {
+                @apply filter-textColor6;
                 height: 24px;
                 width: 24px;
             }
