--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -220,6 +220,7 @@
     --borderColor5: var(--c-CBC9D9);
     --borderColor6: var(--c-D5D8E4);
     --borderColor7: var(--c-EAECF3);
+    --borderColor8: theme(colors.lightGray);
     --borderColor9: var(--c-FFFFFF);
     --borderColorExerciseStatusTagInProgress: theme(colors.lightBlue);
     --borderColorTracksListV3: var(--textColor2);
@@ -259,7 +260,8 @@
     --inputBorderColor: var(--c-8480A0);
     --inputBorderColorFocus: var(--c-2E57E8);
     --inputBoxShadowColorFocus: rgba(46, 87, 232, 0.25);
-    --tabBackgroundColorSelected: var(--c-E1EBFF);
+    --tabBackgroundColorSelected: theme(colors.veryLightBlue);
+    --tabBackgroundColorSelectedLocked: theme(colors.veryLightBlue);
     --tabBorderColorSelected: var(--c-A7B7D6);
     --modalBackgroundColor: rgba(251, 252, 254, 0.7);
     --lockedColor: var(--c-E8EDF7);
@@ -393,7 +395,7 @@
     --backgroundColorB: var(--c-211D2F);
     --backgroundColorC: var(--c-302B42);
     --backgroundColorD: var(--c-3A3557); /* Confirmed */
-    --backgroundColorE: var(--c-4A475F); /* Confirmed */
+    --backgroundColorE: theme(colors.englishViolet);
     --backgroundColorF: var(--c-191525);
     --backgroundColorG: var(--c-2F2943);
     --backgroundColorH: var(--c-F0F3F9);
@@ -463,6 +465,7 @@
     --borderColor5: var(--c-433F56); /* Confirmed */
     --borderColor6: var(--c-433F56);
     --borderColor7: #433f56;
+    --borderColor8: theme(colors.englishViolet);
     --borderColorExerciseStatusTagInProgress: theme(colors.purpleDarkened);
     --borderColorTracksListV3: transparent;
     /* --borderColor7: var(--c-533F56); */
@@ -498,7 +501,8 @@
     --buttonBorderColor2: var(--c-6A6781);
     --inputBackgroundColor: var(--c-282339);
     --inputBorderColorFocus: var(--c-8480A0);
-    --tabBackgroundColorSelected: var(--c-604FCD);
+    --tabBackgroundColorSelected: theme(colors.purple);
+    --tabBackgroundColorSelectedLocked: theme(colors.purpleDimmed);
     --successColor: var(--c-4FCDA7);
     --chartBorderColor: var(--c-6A6781);
 
