--- a/app/css/pages/profile-intro.css
+++ b/app/css/pages/profile-intro.css
@@ -83,6 +83,7 @@
                     height: 160px;
                     width: 160px;
                     @apply mb-8;
+                    @apply filter-textColor6;
                 }
 
                 & h3 {
