--- a/app/views/profiles/intro/_locked.html.haml
+++ b/app/views/profiles/intro/_locked.html.haml
@@ -11,7 +11,7 @@
     .flex.items-center.text-14.leading-paragraph
       .font-semibold.text-textColor6
         = link_to doc_url(:using, 'product/reputation'), class: "flex items-center" do
-          = graphical_icon "info-circle", css_class: "w-[15px] h-[15px] mr-12"
+          = graphical_icon "info-circle", css_class: "w-[15px] h-[15px] mr-12 filter-textColor6"
           How does this work?
       .font-medium.text-textColor7.ml-auto
         Profile creation unlocks at
