--- a/app/css/pages/dashboard.css
+++ b/app/css/pages/dashboard.css
@@ -110,7 +110,7 @@
             }
 
             & a {
-                @apply text-lightBlue;
+                @apply text-prominentLinkColor;
             }
         }
     }
