Add missing filters

--- a/app/css/components/details.css
+++ b/app/css/components/details.css
@@ -13,6 +13,7 @@
                 height: 12px;
                 width: 12px;
                 @apply ml-16;
+                @apply filter-textColor6;
             }
         }
     }
