Add extra cache keys
Use cache instead of existing columns

Fix ruboocop

Fix bug

Fix things

WUP

Cache number of published solutions for a user

Speed up a query

Fix tests

WIP

Fix more tests

Try fixing test in CI

Fix other things

Fix stuff maybe

Fix tests

Try fix tests

Try locking user.data

Revert

Add explore concept button (#5549)

Use lock for cache updates

Fix locking behaviour

Add some extra logging

Use lock for cache updates (#5554)

* Use lock for cache updates

* Fix locking behaviour

Try explicitly reloading the data

Fix reloading every time

And again

Check record ids

Try setting a string not a symbol

Improve updating

Remove need for setting cache each time

Now?

Fix typo

WIP

--- a/app/css/tooltips/concept.css
+++ b/app/css/tooltips/concept.css
@@ -94,4 +94,12 @@
     & .mastered {
         @apply text-textColor1 font-semibold;
     }
+
+    & > .--spinner {
+        @apply self-center mx-auto;
+        height: 30px;
+        width: 30px;
+        animation: spin 3s linear infinite;
+        filter: var(--textColor7-filter);
+    }
 }
