Improve meta tags

--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -1,5 +1,5 @@
-- content_for :meta_title, "Explore the '#{@approach.title.html_safe}' approach for #{@exercise.title} in #{@track.title} on Exercism"
-- content_for :meta_description, "Explore the '#{@approach.title.html_safe}' approach for #{@exercise.title} in #{@track.title} on Exercism. #{@approach.blurb.html_safe}"
+- content_for :meta_title, "Explore the '#{@approach.title}' approach for #{@exercise.title} in #{@track.title} on Exercism".html_safe
+- content_for :meta_description, "Explore the '#{@approach.title}' approach for #{@exercise.title} in #{@track.title} on Exercism. #{@approach.blurb}".html_safe
 -# TODO: add :meta_image
 
 #page-approaches-show.pb-80
