--- a/app/views/tracks/community_solutions/index.html.haml
+++ b/app/views/tracks/community_solutions/index.html.haml
@@ -1,5 +1,5 @@
 - content_for :meta_title, "Community solutions for #{@exercise.title} in #{@track.title} on Exercism"
-- content_for :meta_description, "Explore other people's solutions to #{@exercise.title} in #{@track.title}, and learn how others have solved the exercise."
+- content_for :meta_description, "Explore other people's solutions to #{@exercise.title} in #{@track.title}, and learn how others have solved the exercise.".html_safe
 
 #page-community-solutions-index
   = render ViewComponents::Track::ExerciseHeader.new(@exercise, @solution, @user_track, :community_solutions)
