--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -1,6 +1,6 @@
 
 - content_for :meta_title, "Exercism's Impact Report".html_safe
-- content_for :meta_description, "We've provided over 100 million minutes of free learning to over a million people. Learn more in our impact report!"
+- content_for :meta_description, "We've provided over 100 million minutes of free learning to over a million people. Learn more in our impact report!".html_safe
 
 = render ViewComponents::AboutNav.new(:impact)
 
