--- a/app/views/profiles/badges.html.haml
+++ b/app/views/profiles/badges.html.haml
@@ -1,5 +1,5 @@
 - content_for :meta_title, "#{sanitize(@user.handle)}'s badges to Exercism".html_safe
-- content_for :meta_description, "Explore #{@user.handle}'s badges on Exercism, and see which ones you're missing yourself"
+- content_for :meta_description, "Explore #{sanitize(@user.handle)}'s badges on Exercism, and see which ones you're missing yourself".html_safe
 
 #page-profile-badges
   = render ViewComponents::Profile::Header.new(@user, @profile, :badges)
