--- a/app/views/tracks/articles/show.html.haml
+++ b/app/views/tracks/articles/show.html.haml
@@ -1,5 +1,5 @@
-- content_for :meta_title, "Explore the '#{@article.title.html_safe}' article for #{@exercise.title} in #{@track.title} on Exercism"
-- content_for :meta_description, "Explore the '#{@article.title.html_safe}' article for #{@exercise.title} in #{@track.title} on Exercism. #{@article.blurb.html_safe}"
+- content_for :meta_title, "Explore the '#{@article.title}' article for #{@exercise.title} in #{@track.title} on Exercism".html_safe
+- content_for :meta_description, "Explore the '#{@article.title}' article for #{@exercise.title} in #{@track.title} on Exercism. #{@article.blurb}".html_safe
 -# TODO: add :meta_image
 
 #page-articles-show.pb-80
